# vitalyst1

./: .cursorrules  .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  blueprint.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  phasedplan.md
.github/: CODEOWNERS  (+1 more)
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt  setup.cfg
backend/config/development/: .env.example
backend/config/logging/fluentd/: fluent.conf
backend/config/monitoring/grafana/dashboards/: api-metrics.json  neo4j-metrics.json
backend/config/monitoring/prometheus/: rules.yml
backend/config/production/: .env.example
backend/config/security/policies/: cors.json  rate-limit.json
backend/config/test/: .env.example
backend/docs/api/: README.md  reference.md
backend/docs/deployment/: README.md  ci-cd.md  dependency-management.md  development-guide.md  monitoring.md  security.md
backend/docs/models/: README.md  architecture.md
backend/scripts/: update_dependencies.py
backend/scripts/db/: init-db.sh
backend/scripts/deployment/: health-check.sh
backend/scripts/validation/: validate-schema.sh
backend/src/: main.py
backend/src/api/: routes.py
backend/src/models/: node.py
backend/src/models/nodes/: node.py
backend/src/services/: ai.py  neo4j.py
backend/src/services/ai/: ai.py
backend/src/services/graph/: neo4j.py
backend/src/utils/: auth.py  config.py  env_validation.py  security.py
backend/src/utils/helpers/: auth.py  config.py
(+81 files in other folders)
